// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commonTeamsCard should match snapshot when rendered with all elements 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "title": "Project name",
  "text": "**sertac 🌮** added a new comment on _Manage Zeplin Connector_ screen. 🗞",
  "sections": [
    {
      "title": "Section title",
      "text": "Naptin nettin nettin naptin?",
      "images": [
        {
          "image": "http://placehold.it/160",
          "title": "Section Image"
        }
      ]
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://ergun.sh"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://ergun.sh"
        }
      ]
    }
  ]
}
`;

exports[`commonTeamsCard should match snapshot when rendered with images 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "text",
  "sections": [
    {
      "images": [
        {
          "image": "http://placehold.it/400",
          "title": "Section Image"
        }
      ]
    }
  ]
}
`;

exports[`commonTeamsCard should match snapshot when rendered with links 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "text",
  "sections": [],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in me",
      "targets": [
        {
          "os": "default",
          "uri": "https://ergun.sh"
        }
      ]
    }
  ]
}
`;

exports[`commonTeamsCard should match snapshot when rendered with only required elements 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "text",
  "sections": []
}
`;

exports[`commonTeamsCard should match snapshot when rendered with section 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "text",
  "sections": [
    {
      "title": "sectionTitle",
      "text": "sectionText",
      "images": []
    }
  ]
}
`;

exports[`commonTeamsCard should match snapshot when rendered with title 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "title": "title",
  "text": "text",
  "sections": []
}
`;
